# lo3-core

./: .gitattributes  .gitignore  CMakeLists.txt  CODING_GUIDELINES.md  CTestTestfile.cmake  README.md  SECURITY.md  abc.lo3  compile_commands.json  fbuild  important.lo3  plugin.info  stress_test.lo3  temp.lo3  test.lo3
.github/workflows/: claude-code-review.yml  compile-check.yml  release.yml
include/: additional-naming.h  core.h  lo3.h  specific-language.h  var.h  version.h.in
src/: cli.c  control-flow.c  execute.c  global.c  lo3-getLine.c  main.c  parsing.c  var.c  warnings.c  wasm_exports.c
src/internal/: README  additional-naming.h  bare-define.h  bare-var.h  cf-define.h  cli.h  control-flow.h  core.h  global.h  specific-language.h
test/: CMakeLists.txt  CTestTestfile.cmake  NOTE.txt  README  common.py  run_tests.py
test/syntax/: 01_hello_world.expected  01_hello_world.lo3  02_num_output.lo3  03_negative_num.expected  03_negative_num.lo3  04_zero_output.lo3  05_empty_program.lo3  06_multi_output.expected  06_multi_output.lo3  07_large_num.expected  07_large_num.lo3  08_var_num_assign.lo3  09_var_overwrite.expected  09_var_overwrite.lo3  10_free_recreate.expected  10_free_recreate.lo3  11_two_vars.expected  11_two_vars.lo3  12_var_neg_value.expected  12_var_neg_value.lo3  13_var_default_zero.expected  13_var_default_zero.lo3  14_add.expected  14_add.lo3  15_sub.lo3  16_mul.expected  16_mul.lo3  17_div.expected  17_div.lo3  18_div_truncate.lo3  19_neg_result.expected  19_neg_result.lo3  20_chain_arith.expected  20_chain_arith.lo3  21_div_by_zero.expected  21_div_by_zero.lo3  22_label_define.expected  22_label_define.lo3  23_ret_good_stops.expected  23_ret_good_stops.lo3  (+8 more)
test/unit/: test_arithmetic.py  test_execute.c  test_output.py  test_parsing.c  test_variables.py
test/unit/rust/: Cargo.toml  build.rs  stubs.c
test/unit/rust/.cargo/: config.toml
test/unit/rust/src/: control_flow_tests.rs  execute_tests.rs  global_tests.rs  lib.rs  var_tests.rs  warnings_tests.rs
